; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/sun/extr_sunvnet.c_vnet_select_queue.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/sun/extr_sunvnet.c_vnet_select_queue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sk_buff = type { i32 }
%struct.net_device = type { i32 }
%struct.vnet = type { i32 }
%struct.vnet_port = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.net_device*, %struct.sk_buff*, %struct.net_device*)* @vnet_select_queue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vnet_select_queue(%struct.net_device* %0, %struct.sk_buff* %1, %struct.net_device* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.net_device*, align 8
  %6 = alloca %struct.sk_buff*, align 8
  %7 = alloca %struct.net_device*, align 8
  %8 = alloca %struct.vnet*, align 8
  %9 = alloca %struct.vnet_port*, align 8
  store %struct.net_device* %0, %struct.net_device** %5, align 8
  store %struct.sk_buff* %1, %struct.sk_buff** %6, align 8
  store %struct.net_device* %2, %struct.net_device** %7, align 8
  %10 = load %struct.net_device*, %struct.net_device** %5, align 8
  %11 = call %struct.vnet* @netdev_priv(%struct.net_device* %10)
  store %struct.vnet* %11, %struct.vnet** %8, align 8
  %12 = load %struct.vnet*, %struct.vnet** %8, align 8
  %13 = load %struct.sk_buff*, %struct.sk_buff** %6, align 8
  %14 = call %struct.vnet_port* @__tx_port_find(%struct.vnet* %12, %struct.sk_buff* %13)
  store %struct.vnet_port* %14, %struct.vnet_port** %9, align 8
  %15 = load %struct.vnet_port*, %struct.vnet_port** %9, align 8
  %16 = icmp ne %struct.vnet_port* %15, null
  br i1 %16, label %18, label %17

17:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %22

18:                                               ; preds = %3
  %19 = load %struct.vnet_port*, %struct.vnet_port** %9, align 8
  %20 = getelementptr inbounds %struct.vnet_port, %struct.vnet_port* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  store i32 %21, i32* %4, align 4
  br label %22

22:                                               ; preds = %18, %17
  %23 = load i32, i32* %4, align 4
  ret i32 %23
}

declare dso_local %struct.vnet* @netdev_priv(%struct.net_device*) #1

declare dso_local %struct.vnet_port* @__tx_port_find(%struct.vnet*, %struct.sk_buff*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
